feat(#977): changed is_project_admin into project_role
Changed is_project_admin into project_role to have more
fine grained options. Also when creating a token, now
the project-id can be defined. Default is the default-
project of the user.
