# src/libs/rust/ainari_api_structs/src/auth_structs.rs
@@ -34,6 +34,10 @@ pub struct OAuth2Request {
     pub client_id: String,
     #[validate(length(min = 8, max = 4096))]
     pub client_secret: String,
+    /// Project, for which the token is created. If not set, the default-project of the user is
+    /// used.
+    #[validate(length(min = 4, max = 127))]
+    pub project_id: Option<String>,
     // pub username: Option<String>,
     // pub password: Option<String>,
     // pub scope: Option<String>,
